[GTK] Fix MacCLang build errors in Tools https://bugs.webkit.org/show_bug.cgi?id=150031

Reviewed by Carlos Garcia Campos.

* TestWebKitAPI/PlatformWebView.h: Fix PlatformWindow typedef on OSX flavor of the GTK port.
* TestWebKitAPI/gtk/PlatformWebViewGtk.cpp: Include WKView.h for WKViewCreate().
* WebKitTestRunner/PlatformWebView.h: Fix PlatformWindow typedef on OSX flavor of the GTK port.
* WebKitTestRunner/gtk/PlatformWebViewGtk.cpp: Include WKView.h for WKViewCreate().

Canonical link: https://commits.webkit.org/168883@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191783 268f45cc-cd09-0410-ab3c-d52691b4dbfc