Tools/WebKitTestRunner/gtk/PlatformWebViewGtk.cpp
@@ -30,6 +30,7 @@
 
 #include <WebKit/WKImageCairo.h>
 #include <WebKit/WKPageConfigurationRef.h>
+#include <WebKit/WKView.h>
 #include <WebKit/WKViewPrivate.h>
 #include <gtk/gtk.h>
 #include <wtf/Assertions.h>
